# goes_popen

./: README.md
multi_process_manager/: CMakeLists.txt  demo
multi_process_manager/include/: new_popen.hpp
multi_process_manager/src/: demo.cpp  new_popen.cpp
